; ModuleID = '/home/carl/AnghaBench/linux/arch/powerpc/platforms/cell/spufs/extr_file.c_spufs_ibox_poll.c'
source_filename = "/home/carl/AnghaBench/linux/arch/powerpc/platforms/cell/spufs/extr_file.c_spufs_ibox_poll.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.file = type { %struct.spu_context* }
%struct.spu_context = type { %struct.TYPE_2__*, i32, i32 }
%struct.TYPE_2__ = type { i32 (%struct.spu_context*, i32)* }

@EPOLLIN = common dso_local global i32 0, align 4
@EPOLLRDNORM = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.file*, i32*)* @spufs_ibox_poll to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @spufs_ibox_poll(%struct.file* %0, i32* %1) #0 {
  %3 = alloca %struct.file*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca %struct.spu_context*, align 8
  %6 = alloca i32, align 4
  store %struct.file* %0, %struct.file** %3, align 8
  store i32* %1, i32** %4, align 8
  %7 = load %struct.file*, %struct.file** %3, align 8
  %8 = getelementptr inbounds %struct.file, %struct.file* %7, i32 0, i32 0
  %9 = load %struct.spu_context*, %struct.spu_context** %8, align 8
  store %struct.spu_context* %9, %struct.spu_context** %5, align 8
  %10 = load %struct.file*, %struct.file** %3, align 8
  %11 = load %struct.spu_context*, %struct.spu_context** %5, align 8
  %12 = getelementptr inbounds %struct.spu_context, %struct.spu_context* %11, i32 0, i32 2
  %13 = load i32*, i32** %4, align 8
  %14 = call i32 @poll_wait(%struct.file* %10, i32* %12, i32* %13)
  %15 = load %struct.spu_context*, %struct.spu_context** %5, align 8
  %16 = getelementptr inbounds %struct.spu_context, %struct.spu_context* %15, i32 0, i32 1
  %17 = call i32 @mutex_lock(i32* %16)
  %18 = load %struct.spu_context*, %struct.spu_context** %5, align 8
  %19 = getelementptr inbounds %struct.spu_context, %struct.spu_context* %18, i32 0, i32 0
  %20 = load %struct.TYPE_2__*, %struct.TYPE_2__** %19, align 8
  %21 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %20, i32 0, i32 0
  %22 = load i32 (%struct.spu_context*, i32)*, i32 (%struct.spu_context*, i32)** %21, align 8
  %23 = load %struct.spu_context*, %struct.spu_context** %5, align 8
  %24 = load i32, i32* @EPOLLIN, align 4
  %25 = load i32, i32* @EPOLLRDNORM, align 4
  %26 = or i32 %24, %25
  %27 = call i32 %22(%struct.spu_context* %23, i32 %26)
  store i32 %27, i32* %6, align 4
  %28 = load %struct.spu_context*, %struct.spu_context** %5, align 8
  %29 = call i32 @spu_release(%struct.spu_context* %28)
  %30 = load i32, i32* %6, align 4
  ret i32 %30
}

declare dso_local i32 @poll_wait(%struct.file*, i32*, i32*) #1

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i32 @spu_release(%struct.spu_context*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
